[gd_scene load_steps=8 format=3 uid="uid://dyh5kfftkhqjp"]

[ext_resource type="Script" uid="uid://y1tsg6rcnan1" path="res://scripts/ui/hud/hud.gd" id="1_bo48s"]
[ext_resource type="Texture2D" uid="uid://qlv74o4poatw" path="res://assets/ui/hud/left.png" id="2_8qguk"]
[ext_resource type="Texture2D" uid="uid://mqm603mwvxk" path="res://assets/ui/hud/right.png" id="3_136eg"]
[ext_resource type="Texture2D" uid="uid://dt1nwm1sn7ryo" path="res://assets/ui/hud/jump.png" id="4_8qguk"]
[ext_resource type="Script" uid="uid://crgd2moncm7s1" path="res://scripts/ui/hud/joystick_attack.gd" id="5_136eg"]
[ext_resource type="Texture2D" uid="uid://dgbvj6x27jgfa" path="res://assets/ui/hud/joystick_base.png" id="6_gss2c"]
[ext_resource type="Texture2D" uid="uid://c4dyonhr2u62t" path="res://assets/ui/hud/joystick.png" id="7_h022r"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bo48s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="left" type="TouchScreenButton" parent="Control"]
position = Vector2(63, 536)
texture_normal = ExtResource("2_8qguk")
action = "ui_left"

[node name="right" type="TouchScreenButton" parent="Control"]
position = Vector2(220, 529)
texture_normal = ExtResource("3_136eg")
action = "ui_right"

[node name="jump" type="TouchScreenButton" parent="Control"]
position = Vector2(1084, 304)
texture_normal = ExtResource("4_8qguk")
action = "ui_up"

[node name="joystick_attack" type="Control" parent="Control" groups=["attack_joystick"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1280.0
offset_top = -720.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
script = ExtResource("5_136eg")

[node name="base" type="TextureRect" parent="Control/joystick_attack"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 120.0
texture = ExtResource("6_gss2c")
stretch_mode = 3

[node name="stick" type="TextureRect" parent="Control/joystick_attack"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_h022r")
stretch_mode = 3

[connection signal="pressed" from="Control/left" to="." method="_on_left_pressed"]
[connection signal="released" from="Control/left" to="." method="_on_left_released"]
[connection signal="pressed" from="Control/right" to="." method="_on_right_pressed"]
[connection signal="released" from="Control/right" to="." method="_on_right_released"]
[connection signal="pressed" from="Control/jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="Control/jump" to="." method="_on_jump_released"]
